--- a/src/TimeReporting/TimeReporting.csproj
+++ b/src/TimeReporting/TimeReporting.csproj
@@ -92,6 +92,11 @@
     <_ContentIncludedByDefault Remove="Pages\Identity\Pages\_ValidationScriptsPartial.cshtml" />
     <_ContentIncludedByDefault Remove="Pages\Identity\Pages\_ViewImports.cshtml" />
     <_ContentIncludedByDefault Remove="Pages\Identity\Pages\_ViewStart.cshtml" />
+    <_ContentIncludedByDefault Remove="wwwroot\lib\jquery-validation\dist\additional-methods.js" />
+    <_ContentIncludedByDefault Remove="wwwroot\lib\jquery-validation\dist\additional-methods.min.js" />
+    <_ContentIncludedByDefault Remove="wwwroot\lib\jquery-validation\dist\jquery.validate.js" />
+    <_ContentIncludedByDefault Remove="wwwroot\lib\jquery-validation\dist\jquery.validate.min.js" />
+    <_ContentIncludedByDefault Remove="wwwroot\lib\jquery-validation\LICENSE.md" />
   </ItemGroup>
 
   <ItemGroup>
