--- a/src/TimeReporting.Integration.Tests/TimeReporting.Integration.Tests.csproj
+++ b/src/TimeReporting.Integration.Tests/TimeReporting.Integration.Tests.csproj
@@ -17,6 +17,10 @@
         <PackageReference Include="Testcontainers" Version="4.1.0" />
         <PackageReference Include="Testcontainers.PostgreSql" Version="4.1.0" />
         <PackageReference Include="xunit" Version="2.9.3" />
+        <PackageReference Include="xunit.runner.visualstudio" Version="3.0.1">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
     </ItemGroup>
 
     <ItemGroup>
