--- a/src/TimeReporting.Integration.Tests/TimeReporting.Integration.Tests.csproj
+++ b/src/TimeReporting.Integration.Tests/TimeReporting.Integration.Tests.csproj
@@ -9,9 +9,9 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="coverlet.collector" Version="6.0.2"/>
+        <PackageReference Include="coverlet.collector" Version="6.0.2" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="9.0.0" />
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1"/>
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
         <PackageReference Include="Microsoft.Playwright.Xunit" Version="1.50.0-beta-2" />
         <PackageReference Include="Respawn" Version="6.2.1" />
         <PackageReference Include="Testcontainers" Version="4.1.0" />
@@ -24,12 +24,16 @@
     </ItemGroup>
 
     <ItemGroup>
-        <Using Include="System.Text.RegularExpressions"/>
-        <Using Include="System.Threading.Tasks"/>
+        <Using Include="System.Text.RegularExpressions" />
+        <Using Include="System.Threading.Tasks" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\TimeReporting\TimeReporting.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Pages/Report/" />
     </ItemGroup>
 
 </Project>
